# grocery-agents

./: .gitignore  Cargo.toml  README.md  cargo-x64.cmd  requirements.txt  run-training.cmd
docs/: model_v2.md
lab_ui/: app.js  index.html  styles.css
models/: easy.json  expert.json  hard.json  medium.json  policy_artifacts.json
src/: assign.rs  config.rs  difficulty.rs  dispatcher.rs  dist.rs  lib.rs  main.rs  metrics.rs  model.rs  motion.rs  net.rs  policy.rs  scoring.rs  team_context.rs  world.rs
src/planner/: common.rs  easy.rs  expert.rs  hard.rs  mapf.rs  medium.rs  mod.rs
src/policies/: common.rs  easy.rs  expert.rs  hard.rs  medium.rs  mod.rs
src/replay/: mod.rs
src/sim/: eval.rs  metrics.rs  mod.rs  orders.rs  rules.rs  scenario.rs  state.rs  step.rs
tools/: ensure_replay_server.py  fetch_ws_url_http.py  fetch_ws_url_playwright.py  replay_server.py  run_training_run.py  sweep_eval.py  train_all_torch.py
training/: __init__.py  batch_train.py  common.py  evaluate.py  export.py  extract.py  featurize.py  train.py
viewer/: app.js  index.html  styles.css
