[package]
name = "grocery-agents"
version = "0.1.0"
edition = "2021"
default-run = "grocery-agents"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
smallvec = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
